crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_set_no_suggestion.txt
{(a) #set! (b)}
------------------ DIAGNOSTICS -------------------
error: Tree-sitter predicates are not supported
 --> query.ptk:1:6
  |
1 | {(a) #set! (b)}
  |      ^^^^^
